docs-archive/apache-airflow-providers-sftp/6.0.0/_sources/_api/airflow/providers/sftp/hooks/sftp/index.rst.txt
airflow.providers.sftp.hooks.sftp
=================================

.. py:module:: airflow.providers.sftp.hooks.sftp

.. autoapi-nested-parse::

   This module contains SFTP hook.



Attributes
----------

.. autoapisummary::

   airflow.providers.sftp.hooks.sftp.CHUNK_SIZE


Classes
-------

.. autoapisummary::

   airflow.providers.sftp.hooks.sftp.SFTPHook
   airflow.providers.sftp.hooks.sftp.SFTPHookAsync


Functions
---------

.. autoapisummary::

   airflow.providers.sftp.hooks.sftp.handle_connection_management


Module Contents
---------------

.. py:data:: CHUNK_SIZE
   :value: 65536


.. py:function:: handle_connection_management(func)

.. py:class:: SFTPHook(ssh_conn_id = 'sftp_default', host_proxy_cmd = None, use_managed_conn = True, *args, **kwargs)

   Bases: :py:obj:`airflow.providers.ssh.hooks.ssh.SSHHook`


   Interact with SFTP.

   This hook inherits the SSH hook. Please refer to SSH hook for the input
   arguments.

   :Pitfalls::

       - In contrast with FTPHook describe_directory only returns size, type and
         modify. It doesn't return unix.owner, unix.mode, perm, unix.group and
         unique.
       - If no mode is passed to create_directory it will be created with 777
         permissions.

   Errors that may occur throughout but should be handled downstream.

   For consistency reasons with SSHHook, the preferred parameter is "ssh_conn_id".

   :param ssh_conn_id: The :ref:`sftp connection id<howto/connection:sftp>`


   .. py:attribute:: conn_name_attr
      :value: 'ssh_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'sftp_default'



   .. py:attribute:: conn_type
      :value: 'sftp'



   .. py:attribute:: hook_name
      :value: 'SFTP'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for SSH connection.



   .. py:attribute:: conn
      :type:  paramiko.sftp_client.SFTPClient | None
      :value: None



   .. py:attribute:: use_managed_conn
      :value: True



   .. py:attribute:: ssh_conn_id
      :value: 'sftp_default'



   .. py:method:: get_conn()

      Open an SFTP connection to the remote host.



   .. py:method:: close_conn()

      Close the SFTP connection.



   .. py:method:: get_managed_conn()

      Context manager that closes the connection after use.



   .. py:method:: get_conn_count()

      Get the number of open connections.



   .. py:method:: describe_directory(path)

      Get file information in a directory on the remote system.

      The return format is ``{filename: {attributes}}``. The remote system
      support the MLSD command.

      :param path: full path to the remote directory



   .. py:method:: list_directory(path, recursive = False)

      List files in a directory on the remote system.

      Lists one-level entry names under the given directory path.

      If ``recursive=True``, returns files recursively as paths relative to ``path``.

      :param path: full path to the remote directory to list
      :param recursive: Whether to recursively list descendants.
      :return: List of entry names found under the directory, or None if the directory does not exist.



   .. py:method:: list_directory_with_attr(path)

      List files in a directory on the remote system including their SFTPAttributes.

      :param path: full path to the remote directory to list



   .. py:method:: mkdir(path, mode = 511)

      Create a directory on the remote system.

      The default mode is ``0o777``, but on some systems, the current umask
      value may be first masked out.

      :param path: full path to the remote directory to create
      :param mode: int permissions of octal mode for directory



   .. py:method:: isdir(path)

      Check if the path provided is a directory.

      :param path: full path to the remote directory to check



   .. py:method:: isfile(path)

      Check if the path provided is a file.

      :param path: full path to the remote file to check



   .. py:method:: create_directory(path, mode = 511)

      Create a directory on the remote system.

      The default mode is ``0o777``, but on some systems, the current umask
      value may be first masked out. Different from :func:`.mkdir`, this
      function attempts to create parent directories if needed, and returns
      silently if the target directory already exists.

      :param path: full path to the remote directory to create
      :param mode: int permissions of octal mode for directory



   .. py:method:: delete_directory(path, include_files = False)

      Delete a directory on the remote system.

      :param path: full path to the remote directory to delete



   .. py:method:: retrieve_file(remote_full_path, local_full_path, prefetch = True)

      Transfer the remote file to a local location.

      If local_full_path is a string path, the file will be put
      at that location.

      :param remote_full_path: full path to the remote file
      :param local_full_path: full path to the local file or a file-like buffer
      :param prefetch: controls whether prefetch is performed (default: True)



   .. py:method:: store_file(remote_full_path, local_full_path, confirm = True)

      Transfer a local file to the remote location.

      If local_full_path_or_buffer is a string path, the file will be read
      from that location.

      :param remote_full_path: full path to the remote file
      :param local_full_path: full path to the local file or a file-like buffer



   .. py:method:: delete_file(path)

      Remove a file on the server.

      :param path: full path to the remote file



   .. py:method:: retrieve_directory(remote_full_path, local_full_path, prefetch = True)

      Transfer the remote directory to a local location.

      If local_full_path is a string path, the directory will be put
      at that location.

      :param remote_full_path: full path to the remote directory
      :param local_full_path: full path to the local directory
      :param prefetch: controls whether prefetch is performed (default: True)



   .. py:method:: retrieve_directory_concurrently(remote_full_path, local_full_path, workers = os.cpu_count() or 2, prefetch = True)

      Transfer the remote directory to a local location concurrently.

      If local_full_path is a string path, the directory will be put
      at that location.

      :param remote_full_path: full path to the remote directory
      :param local_full_path: full path to the local directory
      :param prefetch: controls whether prefetch is performed (default: True)
      :param workers: number of workers to use for concurrent transfer (default: number of CPUs or 2 if undetermined)



   .. py:method:: store_directory(remote_full_path, local_full_path, confirm = True)

      Transfer a local directory to the remote location.

      If local_full_path is a string path, the directory will be read
      from that location.

      :param remote_full_path: full path to the remote directory
      :param local_full_path: full path to the local directory



   .. py:method:: store_directory_concurrently(remote_full_path, local_full_path, confirm = True, workers = os.cpu_count() or 2)

      Transfer a local directory to the remote location concurrently.

      If local_full_path is a string path, the directory will be read
      from that location.

      :param remote_full_path: full path to the remote directory
      :param local_full_path: full path to the local directory
      :param confirm: whether to confirm the file size after transfer (default: True)
      :param workers: number of workers to use for concurrent transfer (default: number of CPUs or 2 if undetermined)



   .. py:method:: get_mod_time(path)

      Get an entry's modification time.

      :param path: full path to the remote file



   .. py:method:: path_exists(path)

      Whether a remote entity exists.

      :param path: full path to the remote file or directory



   .. py:method:: walktree(path, fcallback, dcallback, ucallback, recurse = True)

      Recursively descend, depth first, the directory tree at ``path``.

      This calls discrete callback functions for each regular file, directory,
      and unknown file type.

      :param str path:
          root of remote directory to descend, use '.' to start at
          :attr:`.pwd`
      :param callable fcallback:
          callback function to invoke for a regular file.
          (form: ``func(str)``)
      :param callable dcallback:
          callback function to invoke for a directory. (form: ``func(str)``)
      :param callable ucallback:
          callback function to invoke for an unknown file type.
          (form: ``func(str)``)
      :param bool recurse: *Default: True* - should it recurse



   .. py:method:: get_tree_map(path, prefix = None, delimiter = None)

      Get tuple with recursive lists of files, directories and unknown paths.

      It is possible to filter results by giving prefix and/or delimiter parameters.

      :param path: path from which tree will be built
      :param prefix: if set paths will be added if start with prefix
      :param delimiter: if set paths will be added if end with delimiter
      :return: tuple with list of files, dirs and unknown items



   .. py:method:: test_connection()

      Test the SFTP connection by calling path with directory.



   .. py:method:: get_file_by_pattern(path, fnmatch_pattern)

      Get the first matching file based on the given fnmatch type pattern.

      :param path: path to be checked
      :param fnmatch_pattern: The pattern that will be matched with `fnmatch`
      :return: string containing the first found file, or an empty string if none matched



   .. py:method:: get_files_by_pattern(path, fnmatch_pattern)

      Get all matching files based on the given fnmatch type pattern.

      :param path: path to be checked
      :param fnmatch_pattern: The pattern that will be matched with `fnmatch`
      :return: list of string containing the found files, or an empty list if none matched



.. py:class:: SFTPHookAsync(sftp_conn_id = default_conn_name, host = None, port = None, username = None, password = None, known_hosts = default_known_hosts, key_file = '', passphrase = '', private_key = '')

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseHook`


   Interact with an SFTP server via asyncssh package.

   :param sftp_conn_id: SFTP connection ID to be used for connecting to SFTP server
   :param host: hostname of the SFTP server
   :param port: port of the SFTP server
   :param username: username used when authenticating to the SFTP server
   :param password: password used when authenticating to the SFTP server.
       Can be left blank if using a key file
   :param known_hosts: path to the known_hosts file on the local file system. Defaults to ``~/.ssh/known_hosts``.
   :param key_file: path to the client key file used for authentication to SFTP server
   :param passphrase: passphrase used with the key_file for authentication to SFTP server


   .. py:attribute:: conn_name_attr
      :value: 'ssh_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'sftp_default'



   .. py:attribute:: conn_type
      :value: 'sftp'



   .. py:attribute:: hook_name
      :value: 'SFTP'



   .. py:attribute:: default_known_hosts
      :value: '~/.ssh/known_hosts'



   .. py:attribute:: sftp_conn_id
      :value: 'sftp_default'



   .. py:attribute:: host
      :value: None



   .. py:attribute:: port
      :value: None



   .. py:attribute:: username
      :value: None



   .. py:attribute:: password
      :value: None



   .. py:attribute:: known_hosts
      :type:  bytes | str


   .. py:attribute:: key_file
      :value: ''



   .. py:attribute:: passphrase
      :value: ''



   .. py:attribute:: private_key
      :value: ''



   .. py:method:: retrieve_file(remote_full_path, local_full_path, chunk_size = CHUNK_SIZE)
      :async:


      Transfer the remote file to a local location asynchronously.

      If local_full_path is a string or PathLike path, the file will be put at that location.
      If it is a BytesIO or other binary file-like object, the file will be streamed into it.

      :param remote_full_path: Full path to the remote file.
      :param local_full_path: Full path to the local file or a binary file-like buffer.
      :param chunk_size: Size of chunks to read at a time (default: 64KB).



   .. py:method:: store_file(remote_full_path, local_full_path)
      :async:


      Transfer a local file to the remote location.

      If ``local_full_path`` is a path, the file will be read from that location.
      If it is a binary file-like object, the content will be uploaded from the stream.
      Raw ``bytes`` values are not accepted directly; wrap bytes in ``BytesIO``.

      Parent directories for ``remote_full_path`` are created when missing.

      :param remote_full_path: full path to the remote file
      :param local_full_path: full path to the local file or a binary file-like buffer



   .. py:method:: mkdir(path)
      :async:


      Create a directory on the remote system asynchronously.

      The default permissions are determined by the server. Parent directories are created as needed.

      :param path: Full path to the remote directory to create.



   .. py:method:: list_directory(path = '', recursive = False)
      :async:


      List files in a directory on the remote system asynchronously.

      Lists one-level entry names under the given directory path.

      If ``recursive=True``, returns files recursively as paths relative to ``path``.

      :param path: Full path to the remote directory to list.
      :param recursive: Whether to recursively list descendants.
      :return: List of entry names found under the directory, or None if the directory does not exist.



   .. py:method:: walktree(path, fcallback, dcallback, ucallback, recurse = True)
      :async:


      Recursively descend, depth first, the directory tree at ``path``.

      This mirrors :meth:`SFTPHook.walktree` contract and calls callback functions for
      regular files, directories, and unknown file types.



   .. py:method:: read_directory(path = '')
      :async:


      Return a list of files along with their attributes on the SFTP server at the provided path.



   .. py:method:: get_files_and_attrs_by_pattern(path = '', fnmatch_pattern = '')
      :async:


      Get the files along with their attributes matching the pattern (e.g. ``*.pdf``) at the provided path.

      if one exists. Otherwise, raises an AirflowException to be handled upstream for deferring



   .. py:method:: get_mod_time(path)
      :async:


      Make SFTP async connection.

      Looks for last modified time in the specific file path and returns last modification time for
       the file path.

      :param path: full path to the remote file



